<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:orientation="vertical"
    android:paddingBottom="@dimen/paddingBottom_ten"
  
    android:background="@drawable/appbg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#296894" >

            <TextView
                android:id="@+id/textView_evoita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/logo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_spa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logospa"
                android:textColor="@color/aqua"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineA"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@color/blueLight"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_weight="0.28"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="0dp"
         >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loginicon" />

        <LinearLayout android:layout_width="800dp" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:orientation="vertical" android:paddingBottom="5dp" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:paddingTop="@dimen/paddingTop_twenty" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:text="Web Server Url: "
                    android:textColor="#fff" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                   

                    <EditText
                        android:id="@+id/editText_url"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/rounded"
                        android:clickable="true"
                        android:ems="10"
                        android:fadingEdge="horizontal"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/hints"
                        android:inputType="text|textPersonName"
                        android:singleLine="true"
                        android:textAppearance="@style/AppBaseTheme"
                        android:textColor="@color/black"
                        android:textSize="@dimen/activity_normal_textsize"
						android:paddingLeft="30dp"/>

 <ImageView
     android:layout_width="21dp"
     android:layout_height="22dp"
     android:layout_alignParentRight="false"
     android:layout_margin="5dp"
     android:src="@drawable/urlicon" />
                    
                </RelativeLayout>
            </LinearLayout>
            
             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:paddingTop="@dimen/paddingTop_twenty" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:text="Local Path Url: "
                    android:textColor="#fff" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                   
                    <EditText
                        android:id="@+id/Download_url"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:layout_toLeftOf="@+id/localpathbtn"
                        android:background="@drawable/rounded"
                        android:clickable="true"
                        android:ems="10"
                        android:fadingEdge="horizontal"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/hints"
                        android:inputType="text|textPersonName"
                        android:paddingLeft="30dp"
                        android:singleLine="true"
                        android:textAppearance="@style/AppBaseTheme"
                        android:textColor="@color/black"
                        android:textSize="@dimen/activity_normal_textsize" />

 <ImageView
     android:layout_width="21dp"
     android:layout_height="22dp"
     android:layout_alignParentRight="false"
     android:layout_margin="5dp"
     android:src="@drawable/urlicon" />

 <Button
     android:id="@+id/localpathbtn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBottom="@+id/Download_url"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
     android:text="Browse" />
                    
                </RelativeLayout>
            </LinearLayout>
            
             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:paddingTop="@dimen/paddingTop_twenty" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:text="Server Path Url: "
                    android:textColor="#fff" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >
                   
                    <EditText
                        android:id="@+id/Server_url"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:layout_toLeftOf="@+id/serverpathbtn"
                        android:background="@drawable/rounded"
                        android:clickable="true"
                        android:ems="10"
                        android:fadingEdge="horizontal"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/hints"
                        android:inputType="text|textPersonName"
                        android:paddingLeft="30dp"
                        android:singleLine="true"
                        android:textAppearance="@style/AppBaseTheme"
                        android:textColor="@color/black"
                        android:textSize="@dimen/activity_normal_textsize" />

 <ImageView
     android:layout_width="21dp"
     android:layout_height="22dp"
     android:layout_alignParentRight="false"
     android:layout_margin="5dp"
     android:src="@drawable/urlicon" />

 <Button
     android:id="@+id/uploadpathbtn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBottom="@+id/Server_url"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
     android:text="Button" />
                    
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:gravity="center"
                android:orientation="horizontal" >

               

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/paddingTop_fifteen" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </LinearLayout>

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/loginbtn"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/submit"
                    android:textColor="@color/white" />
          
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="100dp" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>